--- a/style.css
+++ b/style.css
@@ -1,6 +1,67 @@
+ /* 200px de largura
+padding de 20px
+
+borda solida de 2px ao redor do card
+
+não pode ultrapassar os 200px de largura total */
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+
+body {
+    height: 90vh;
+    width: 100vw;
+    background-color: #1E1E1E;
+    color: white;
+}
+
+
+.card {
+    width: 200px;
+    padding: 20px;
+    background-color:white;
+    color: black;
+    border: 2px solid white;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 1em;
+}
+
+button:hover {
+    background-color: red;
+    color: white;
+    transition: all 0.3s ease-in-out;
+}
+
+img {
+    width: 100%;
+    border-radius: 10px;
+
+}
+
+h1 {
+    font-size: 1em;
+    text-align: center;
 }
